# socadb-desktop

./: .gitignore  .prettierignore  CHANGELOG.md  eslint.config.js  index.html  package-lock.json  package.json  release-please-config.json  renovate.json  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: build-check.yml  build.yml  ci.yml  release-please.yml  release.yml
.husky/: pre-commit  pre-push
docs/plans/: 2026-03-09-db-type-sql-export-design.md  2026-03-25-multi-provider-design.md
mcp-server/: build.ts  package-lock.json  package.json  tsconfig.json
mcp-server/src/: agent-runner-claude.ts  agent-runner-codex.ts  agent-runner-shared.ts  agent-runner.ts  bridge.ts  build.ts  index.ts
scripts/linux/: linuxdeploy-plugin-gtk.sh
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  detect.rs  diagnose.rs  lib.rs  main.rs  ws.rs
src/hooks/: useAppMenu.ts  useAutoUpdate.ts  useChatStream.ts  useClickOutside.ts  useInstallOnQuit.ts  useKeyboardShortcuts.ts  useMcpBridge.ts  useNewSchemaModal.ts  useUnsavedChangesGuard.ts  useUpdateReadyToast.tsx  useWindowsKeyboardShortcuts.ts
src/locales/: en.json  fr.json
src/stores/: chatStore.ts  focusStore.ts  schemaStore.test.ts  schemaStore.ts  themeStore.ts  updateStore.ts
src/types/: chat.test.ts  chat.ts  schema.ts
src/utils/: autoLayout.ts  chatCommands.ts  chatEventHandler.ts  chatPersistence.ts  errorMessage.ts  (+36 more)
(+30 files in other folders)
